[project]
name = "heart-sounds-segmentation"
version = "1.0.0"
description = "Heart sounds segmentation based on LSTM neural network and Fourier Synchrosqueezed Transform."
authors = [{ name = "Alvaro J. Gaona", email = "alvgaona@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Home = "https://github.com/alvgaona/heart-sounds-segmentation"

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64", "win-64"]

[tool.pixi.project.pypi-options]
extra-index-urls = [
    "https://gitlab.com/api/v4/projects/62793076/packages/pypi/simple",
]

[tool.pixi.dependencies]
scipy = "1.11.2"
pandas = "2.0.3"
numba = "0.57.1"

[tool.pixi.pypi-dependencies]
sox = "*"
soundfile = "*"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.5.0%2Bcu118-cp311-cp311-linux_x86_64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.20.0%2Bcu118-cp311-cp311-linux_x86_64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.5.0%2Bcu118-cp311-cp311-linux_x86_64.whl" }
fsst = ">=0.1.0,<0.2"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
ruff = "*"
matplotlib = ">=3.9.2,<4"
pyright = ">=1.1.384,<2"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".pixi"]

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "I"]
ignore = ["E741"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
venvPath = ".pixi/envs"
venv = "dev"
