[project]
name = "heart-sounds-segmentation"
version = "1.0.0"
description = "Heart sounds segmentation based on LSTM neural network and Fourier Synchrosqueezed Transform."
authors = [{ name = "Alvaro J. Gaona", email = "alvgaona@gmail.com" }]
maintainers = [{ name = "Alvaro J. Gaona", email = "alvgaona@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
Home = "https://github.com/alvgaona/heart-sounds-segmentation"

[tool.pixi.workspace]
channels = ["nvidia", "conda-forge", "pytorch", "https://prefix.dev/ssq"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.11.*"
scipy = ">=1.11,<2"
pandas = ">=2.0,<3"
numba = ">=0.58,<1"
rich = ">=13.9.3,<14"
pytest = "*"
ruff = "*"
matplotlib = ">=3.9.2,<4"
pyright = ">=1.1.384,<2"
lightning = ">=2.4.0,<3"
seaborn = ">=0.13.2,<0.14"
scikit-learn = ">=1.5.2,<2"
ssq = "*"

[tool.pixi.target.linux-64.dependencies]
pytorch = { version = ">=2.4.1,<3", channel = "pytorch" }
torchvision = { version = ">=0.19.1,<0.21", channel = "pytorch" }
torchaudio = { version = ">=2.4.1,<3", channel = "pytorch" }
pytorch-cuda = "12.1.*"

[tool.pixi.target.osx-arm64.dependencies]
pytorch = ">=2.4.1,<3"
torchvision = ">=0.19.1,<0.21"
torchaudio = ">=2.4.1,<3"

[tool.pixi.pypi-dependencies]
sox = "*"
soundfile = "*"

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".pixi"]

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "I"]
ignore = ["E741"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
venvPath = ".pixi/envs"
venv = "default"
